tests/baselines/reference/objectLiteralShorthandProperties4.errors.txt
tests/cases/compiler/objectLiteralShorthandProperties4.ts(3,5): error TS2304: Cannot find name 'undefinedVariable'.


==== tests/cases/compiler/objectLiteralShorthandProperties4.ts (1 errors) ====
    var x = {
        x, // OK
        undefinedVariable // Error
        ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'undefinedVariable'.
    }
    